--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,18 @@
 graft src/collective.z3cform
 graft docs
-include *.rst
+graft news
+prune etc
+include *.md
+include *.yml
+include Makefile
 exclude tox.ini
 exclude *.txt
-exclude .gitlab-ci.yml
 global-exclude *.pyc
+include .coveragerc
+recursive-include src *.gitkeep
+recursive-include src *.po
+recursive-include src *.pot
+recursive-include src *.rst
+recursive-include src *.sh
+recursive-include src *.xml
+recursive-include src *.zcml
